--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,8 @@
     <div class="container">
       <!-- Logo -->
       <a class="navbar-brand" href="{% url 'home' %}">
-        <img class="home" src="{% static 'images/battleroster-logo.png' %}" alt="BattleRoster Logo" id="battleroster-logo">
+        <img class="home" src="{% static 'images/battleroster-logo.png' %}" alt="BattleRoster Logo"
+          id="battleroster-logo">
       </a>
 
       <!-- Hamburger button -->
@@ -34,14 +35,19 @@
       <!-- Navbar items -->
       <div class="collapse navbar-collapse justify-content-end" id="navMenu">
         <ul class="navbar-nav flex-column align-items-start">
-          <li class="nav-item"><a class="nav-link" href="{% url 'characters' %}"><i class="fa-solid fa-user me-2 text-gold"></i>Characters</a></li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'party' %}"><i class="fa-solid fa-users me-2 text-gold"></i>Party</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'characters' %}"><i
+                class="fa-solid fa-user me-2 text-gold"></i>Characters</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'party' %}"><i
+                class="fa-solid fa-users me-2 text-gold"></i>Party</a></li>
           {% if user.is_authenticated %}
-          <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket me-2 text-gold"></i>Log out</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><i
+                class="fa-solid fa-right-from-bracket me-2 text-gold"></i>Log out</a></li>
           {% else %}
-          <li class="nav-item"><a class="nav-link" href="{% url 'signup_login' %}"><i class="fa-solid fa-save me-2 text-gold"></i>Sign-up / Log-in</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'signup_login' %}"><i
+                class="fa-solid fa-save me-2 text-gold"></i>Sign-up / Log-in</a></li>
           {% endif %}
-          <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-scroll me-2 text-gold"></i>Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}"><i
+                class="fa-solid fa-scroll me-2 text-gold"></i>Contact</a></li>
         </ul>
       </div>
     </div>
@@ -49,11 +55,11 @@
 
   <!-- Messages -->
   {% if messages %}
-    <div class="container mt-3">
-      {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-      {% endfor %}
-    </div>
+  <div class="container mt-3">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
+  </div>
   {% endif %}
 
   <!-- Main content -->
@@ -76,10 +82,13 @@
             Feel free to rest, take stock of your party and prepare for your next quest over a tankard or two of my
             finest ale.<br><br>
             Select the <strong>Characters</strong> option from the menu to create or manage your rosters.<br><br>
-            You can also team up with other adventurers with the <strong>Party</strong> tab and check their overall health or mana levels.<br><br>
-            We also cater for Dungeon Masters who can register straight away and keep a watch on the whole party during your quest via the <strong>Sign-up/Log-in</strong> menu tab.<br><br>
+            You can also team up with other adventurers with the <strong>Party</strong> tab and check their overall
+            health or mana levels.<br><br>
+            We also cater for Dungeon Masters who can register straight away and keep a watch on the whole party during
+            your quest via the <strong>Sign-up/Log-in</strong> menu tab.<br><br>
             To return to the bar, just click the <strong>BattleRoster Logo</strong>.<br><br>
-            Any problems, or if that fella in the corner is bothering you, just let me know in the <strong>Contact</strong> tab.
+            Any problems, or if that fella in the corner is bothering you, just let me know in the
+            <strong>Contact</strong> tab.
           </p>
         </div>
       </div>
@@ -90,15 +99,20 @@
   <!-- Footer -->
   <footer id="footerSocials">
     <ul id="social-networks" class="socials list-unstyled d-flex gap-5 justify-content-center">
-      <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-      <li><a href="https://www.X.com/" target="_blank" rel="noopener" aria-label="visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a></li>
-      <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a></li>
-      <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+          aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+      <li><a href="https://www.X.com/" target="_blank" rel="noopener"
+          aria-label="visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+      <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+          aria-label="visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a></li>
+      <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+          aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
     </ul>
   </footer>
 
   <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
   <script src="{% static 'js/main.js' %}"></script>
   <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
 </body>
