--- a/templates/characters.html
+++ b/templates/characters.html
@@ -201,9 +201,11 @@
 
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
   <script src="{% static 'js/main.js' %}"></script>
+  <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
